--- a/day00/Cargo.toml
+++ b/day00/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Andy Theuninck <andy@gohanman.com>"]
 
 [dependencies]
+
+[dependencies.proj_self]
+path = "../proj_self"
+
