--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Andy Theuninck <andy@gohanman.com>"]
 
 [dependencies]
+
+[dependencies.knot_hash]
+path = "../knot_hash"
+
